<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#cf000000"
    android:padding="5dp"
    >

   <ImageView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:src="@drawable/game_over_textimage"
       android:scaleType="fitCenter"
       android:background="@android:color/transparent"
       android:focusable="false"
       android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Out of energy!"
        android:singleLine="true"
        android:textSize="30sp"
        android:textAlignment="center"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:id="@+id/game_over_cause_tv" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:id="@+id/no_lives_remaining_message"
        android:text="@string/_no_lives_remaining_message"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold|italic"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="8"
        android:id="@+id/restart_sublayout_wrapper"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/button_background_9patch"
            android:gravity="center"
            android:id="@+id/clickable_restart_sublayout"
            android:visibility="visible"
            android:layout_weight="6"
            android:alpha="100">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/restart_button"
                android:src="@drawable/restart_icon"
                android:background="@android:color/transparent"
                android:focusable="false"
                android:padding="5dp"
                android:layout_gravity="center"

                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yoke"
                android:orientation="vertical"
                android:gravity="center"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/restart_info"
                    android:text="Restart current level"
                    android:singleLine="false"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"

                    android:padding="5dp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:id="@+id/game_over_costs"
                        android:text="@string/_game_over_costs"
                        android:singleLine="true"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textStyle="bold"
                        android:textColor="#ec0000"
                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/game_over_costs"
                        android:layout_alignBottom="@+id/game_over_costs"
                        android:src="@drawable/heart_icon_ec0000"
                        android:layout_toRightOf="@+id/game_over_costs"
                        android:layout_toEndOf="@+id/game_over_costs"
                        android:baselineAlignBottom="true"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/current_lives_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/_gameover_youhave"
                        android:singleLine="true"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textStyle="bold"
                        android:textColor="#ffffff"
                        />

                    <TextView
                        android:id="@+id/current_lives_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/current_lives_text"
                        android:layout_toEndOf="@+id/current_lives_text"
                        android:singleLine="true"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textStyle="bold|italic"
                        android:textColor="#ec0000"

                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/current_lives_quantity"
                        android:layout_alignBottom="@+id/current_lives_quantity"
                        android:src="@drawable/heart_icon_ec0000"
                        android:layout_toRightOf="@+id/current_lives_quantity"
                        android:layout_toEndOf="@+id/current_lives_quantity"
                        android:baselineAlignBottom="true"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"

                        />

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>




    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/purchase_lives"
            android:text="Buy Lives"
            android:layout_gravity="center"
            android:background="@drawable/button_background_9patch"
            android:textColor="#ffffff"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textStyle="bold"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_to_homescreen"
            android:text="Main Menu"
            android:layout_gravity="center"
            android:background="@drawable/button_background_9patch"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:paddingEnd="10dp"
            android:paddingStart="10dp" />
    </LinearLayout>


</LinearLayout>