<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Slingball">

    <LinearLayout android:id="@+id/vertical_god"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:weightSum="3"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:dividerPadding="40dp"
        android:orientation="vertical"
        android:background="@color/black_overlay"
        tools:ignore="UselessParent">

        <com.intricatech.slingball.TitleSurfaceView
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="1"
            android:columnCount="4"
            android:orientation="horizontal"
            android:alignmentMode="alignMargins"
            android:layout_gravity="center">

            <ImageButton android:id="@+id/info_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:focusable="false"
                android:background="@drawable/info_icon"
                android:onClick="onLaunchInstructionsButtonClick"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_row="0"
                android:layout_column="0"></ImageButton>

            <ImageButton android:id="@+id/goto_shop_button"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:focusable="false"
                android:background="@drawable/shop_button"
                android:onClick="onGotoShopButtonClicked"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnSpan="2"></ImageButton>

            <ImageButton android:id="@+id/settings_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:focusable="false"
                android:background="@drawable/settings_icon"
                android:onClick="onSettingsButtonClick"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_row="0"
                android:layout_column="3"></ImageButton>

        </GridLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            >

            <ImageButton
                android:id="@+id/play_resume_button"
                android:layout_width="150dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:focusable="false"
                android:background="@drawable/play_icon"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:onClick="onPlayResumeGameButtonClick"
                />

            <ImageButton
                android:id="@+id/new_game_button"
                android:layout_width="150dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:focusable="false"
                android:background="@drawable/new_game_icon"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:onClick="onNewGameButtonClick"
                />

        </LinearLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="1"
            android:columnCount="3"
            android:orientation="horizontal"
            android:alignmentMode="alignMargins"
            android:layout_gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/baby_button"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:background="@drawable/baby_icon_selected"
                    android:onClick="onBabyButtonClick"
                    android:focusable="false"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_rowSpan="1"
                    android:layout_columnSpan="1"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    ></ImageButton>

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:id="@+id/baby_button_completed_imageview"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:src="@drawable/completed_icon"
                    />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/medium_button"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:background="@drawable/medium_icon"
                    android:onClick="onMediumButtonClick"
                    android:focusable="false"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_rowSpan="1"
                    android:layout_columnSpan="1"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp" />

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:id="@+id/medium_button_completed_imageview"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:src="@drawable/completed_icon"
                    />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/ninja_button"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:focusable="false"
                    android:background="@drawable/ninjaicon"
                    android:onClick="onNinjaButtonClick"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_rowSpan="1"
                    android:layout_columnSpan="1"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"></ImageButton>

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:id="@+id/hard_button_completed_imageview"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:src="@drawable/completed_icon"
                    />

            </RelativeLayout>


        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/games_played_reporter"
            android:layout_margin="10dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="never say never"
            android:layout_gravity="center"
            android:onClick="neverSayNever"
            android:visibility="gone" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ask_user_instruct_panel"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_want_intructions_text"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_margin="30dp" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="3"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yes_instruct_button"
                android:layout_row="0"
                android:layout_columnSpan="2"
                android:layout_column="1"
                android:text="@string/yes_instruct_button_text"
                android:textSize="30sp"
                android:background="@drawable/button_background_9patch"
                android:onClick="yesInstructClick"
                android:layout_margin="10dp"
                android:layout_gravity="fill_horizontal"
                android:textColor="#ffffff"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/not_now_instruct_button"
                android:layout_row="1"
                android:layout_columnSpan="2"
                android:layout_column="1"
                android:text="@string/not_now_instruct_button_text"
                android:textSize="30sp"
                android:background="@drawable/button_background_9patch"
                android:onClick="notNowInstructClick"
                android:layout_margin="10dp"
                android:layout_gravity="fill_horizontal"
                android:textColor="#ffffff"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/never_instruct_button"
                android:layout_row="2"
                android:layout_columnSpan="2"
                android:layout_column="1"
                android:text="@string/never_instruct_button_text"
                android:textSize="30sp"
                android:background="@drawable/button_background_9patch"
                android:onClick="neverInstructClick"
                android:layout_margin="10dp"
                android:layout_gravity="fill_horizontal"
                android:textColor="#ffffff"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp" />
        </GridLayout>


    </LinearLayout>




</FrameLayout>